--- a/doc/RULES
+++ b/doc/RULES
@@ -117,7 +117,7 @@ no fun. Something like "print 'obj', obj" is fine. Something like "print
 Please avoid 'import *'.
 Use "from foo import bar" only if bar is clearly identifiable to belong to
 foo (e.g.: it's ok to "from Screens.MessageBox import MessageBox", but it's
-not ok to do "from os import path". Use "import os.path", then os.path.fnc.
+not ok to do "from os import path". Use "from os.path import fnc", then fnc.
 Of course "from os.path import *" is even worse.)
 
 7.-99.) Threads are bad.
