--- a/tools/enigma2.sh.in
+++ b/tools/enigma2.sh.in
@@ -139,14 +139,19 @@ while : ; do
 
 	# Enigma2 exit codes:
 	#
-	#  1 - halt
+	#  1 - shutdown (halt)
 	#  2 - reboot
 	#  3 - restart enigma
 	#  4 - front processor upgrade
 	#  5 - install new settings
+	#  6 - restart enigma in debug
 	#  7 - manufacturer reset
-	# 42 - offline update
-	# 43 - restart for autoinstall
+	# 12 - reboot to android
+	# 16 - reboot to recovery
+	# 42 - restart for unattended update
+	# 43 - restart for autobackup restore
+	# 44 - INI MICOM upgrade
+	# 45 - GigaBlue WOL
 	#
 	# >128 signal
 
