--- a/lib/python/Screens/Makefile.am
+++ b/lib/python/Screens/Makefile.am
@@ -83,6 +83,6 @@ install_PYTHON = \
 	UnhandledKey.py \
 	VirtualKeyBoard.py \
 	Volume.py \
-	VuplusKexec.py \
+	VuKexec.py \
 	Wizard.py \
 	WizardLanguage.py
