Get rid of _de.jpg images, e2 is English

--- a/lib/python/Plugins/Extensions/DVDBurn/meta/Makefile.am
+++ b/lib/python/Plugins/Extensions/DVDBurn/meta/Makefile.am
@@ -2,4 +2,4 @@ installdir = $(datadir)/meta
 
 dist_install_DATA = plugin_dvdburn.xml
 
-EXTRA_DIST = dvdburn_de.jpg dvdburn_en.jpg
+EXTRA_DIST = dvdburn_en.jpg
