--- a/lib/python/Plugins/Extensions/GraphMultiEPG/meta/Makefile.am
+++ b/lib/python/Plugins/Extensions/GraphMultiEPG/meta/Makefile.am
@@ -2,4 +2,4 @@ installdir = $(datadir)/meta
 
 dist_install_DATA = plugin_graphmultiepg.xml
 
-EXTRA_DIST = graphmultiepg_de.jpg graphmultiepg_en.jpg
+EXTRA_DIST = graphmultiepg_en.jpg
