--- a/lib/python/Plugins/Extensions/MediaPlayer/meta/Makefile.am
+++ b/lib/python/Plugins/Extensions/MediaPlayer/meta/Makefile.am
@@ -2,4 +2,4 @@ installdir = $(datadir)/meta
 
 dist_install_DATA = plugin_mediaplayer.xml
 
-EXTRA_DIST = mediaplayer_de.jpg mediaplayer_en.jpg
+EXTRA_DIST = mediaplayer_en.jpg
