--- a/lib/python/Plugins/Extensions/MediaScanner/meta/Makefile.am
+++ b/lib/python/Plugins/Extensions/MediaScanner/meta/Makefile.am
@@ -2,4 +2,4 @@ installdir = $(datadir)/meta
 
 dist_install_DATA = plugin_mediascanner.xml
 
-EXTRA_DIST = mediascanner_de.jpg mediascanner_en.jpg
+EXTRA_DIST = mediascanner_en.jpg
