--- a/lib/python/Plugins/SystemPlugins/NetworkWizard/meta/Makefile.am
+++ b/lib/python/Plugins/SystemPlugins/NetworkWizard/meta/Makefile.am
@@ -2,4 +2,4 @@ installdir = $(datadir)/meta
 
 dist_install_DATA = plugin_networkwizard.xml
 
-EXTRA_DIST = networkwizard_en.jpg networkwizard_de.jpg
+EXTRA_DIST = networkwizard_en.jpg
