--- a/lib/python/Plugins/SystemPlugins/DiseqcTester/meta/Makefile.am
+++ b/lib/python/Plugins/SystemPlugins/DiseqcTester/meta/Makefile.am
@@ -2,4 +2,4 @@ installdir = $(datadir)/meta
 
 dist_install_DATA = plugin_diseqctester.xml
 
-EXTRA_DIST = diseqctester_de.jpg diseqctester_en.jpg
+EXTRA_DIST = diseqctester_en.jpg
