--- a/lib/python/Plugins/SystemPlugins/WirelessLan/meta/Makefile.am
+++ b/lib/python/Plugins/SystemPlugins/WirelessLan/meta/Makefile.am
@@ -2,4 +2,4 @@ installdir = $(datadir)/meta
 
 dist_install_DATA = plugin_wirelesslan.xml
 
-EXTRA_DIST = wirelesslan_de.jpg wirelesslan_en.jpg
+EXTRA_DIST = wirelesslan_en.jpg
