Add FlashExpander screen
Co-authored-by: IanSav <IanSav@users.noreply.github.com>
Co-authored-by: jbleyel <jbleyel@gmx.net>

--- a/lib/python/Screens/Makefile.am
+++ b/lib/python/Screens/Makefile.am
@@ -16,6 +16,7 @@ install_PYTHON = \
 	EventView.py \
 	FactoryReset.py \
 	FixedMenu.py \
+	FlashExpander.py \
 	FlashImage.py \
 	Globals.py \
 	HarddiskSetup.py \
