--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = countries display fonts extensions keymaps skin_default skin_fallback_1080
+SUBDIRS = countries display fonts extensions keymaps skin_default
 
 dist_pkgdata_DATA = \
 	black.mvi \
@@ -10,3 +10,7 @@ dist_pkgdata_DATA = \
 	setup.xml \
 	skin_subtitles.xml \
 	startwizard.xml
+
+if HAVE_FHDSKIN
+SUBDIRS += skin_fallback_1080
+endif
